# moji

./: .gitignore  CMakeLists.txt  app.rc  commitdetailwidget.cpp  commitdetailwidget.h  commitmodel.cpp  filewatcher.cpp  gitmanager.cpp  gitmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.pro
docs/: user-manual.md
docs/superpowers/plans/: 2026-05-27-ui-modernization-plan.md
docs/superpowers/specs/: 2026-05-26-branch-management-design.md  2026-05-27-ui-modernization-design.md
include/: aidialog.h  chapterlistmodel.h  commitdetailwidget.h  commitmodel.h  environmentsetupdialog.h  filewatcher.h  gitmanager.h  mainwindow.h  memodialog.h
resources/: mathjax.html  resources.qrc
src/: aidialog.cpp  chapterlistmodel.cpp  commitdetailwidget.cpp  commitmodel.cpp  environmentsetupdialog.cpp  gitmanager.cpp  main.cpp  mainwindow.cpp  memodialog.cpp
ui/: mainwindow.ui
